<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@color/white"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:transformPivotY="2dp"
        android:background="@drawable/valley_intro"
        android:layout_width="fill_parent"
        android:layout_height="200.0dip"
        android:layout_gravity="center"/>

    <LinearLayout
        android:id="@+id/linear"
        android:orientation="vertical"
        android:padding="20.0dip"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/logo"
            android:contentDescription="@string/brand_logo"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="70.0dip"
            android:layout_marginTop="15.0dip"
            android:layout_marginBottom="20.0dip"
            android:src="@drawable/logo"/>

        <android.support.v7.widget.CardView
            android:visibility="visible"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10.0dip"
            app:cardCornerRadius="6.0dip"
            app:cardElevation="5.0dip">

            <LinearLayout
                android:orientation="vertical"
                android:padding="20.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="35sp"
                    android:textColor="@color/blue_1"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10.0dip"
                    android:layout_marginBottom="35.0dip"
                    android:text="@string/login_title" />

                <TextView
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textStyle="bold"
                    android:textColor="@color/grey_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/student_id"/>
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/username_entry"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/blue_1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4.0dip"
                    android:layout_marginRight="-4.0dip"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:maxLength="50"
                    android:inputType="textCapCharacters"/>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="10.0dip" />
                <TextView
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textStyle="bold"
                    android:textColor="@color/grey_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/student_password" />
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password_entry"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/blue_1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4.0dip"
                    android:layout_marginRight="-4.0dip"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:maxLength="50"
                    android:inputType="textPassword" />
                <TextView
                    android:id="@+id/login_error"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/login_error"
                    android:textColor="@color/Red"
                    android:visibility="invisible"
                    android:textSize="12sp"/>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="3.0dip" />
                <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/button_shape"
                    android:text="@string/student_signin"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    app:spinning_bar_width="4dp"
                    app:spinning_bar_color="#FFF"
                    app:spinning_bar_padding="6dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <LinearLayout
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15.0dip"
                    android:layout_marginBottom="5.0dip">
                    <TextView
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@color/blue_grey"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_student" />
                    <TextView
                        android:id="@+id/goto_signup"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textStyle="bold"
                        android:textColor="@color/blue_1"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/student_signup" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/version"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.863" />
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>


</RelativeLayout>