<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@color/black_blue"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/linear"
        android:orientation="vertical"
        android:padding="20.0dip"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/back"
        android:layout_centerInParent="true">
        <android.support.v7.widget.CardView
            android:visibility="visible"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10.0dip"
            app:cardCornerRadius="6.0dip"
            app:cardElevation="5.0dip">
            <LinearLayout
                android:orientation="vertical"
                android:padding="20.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="35sp"
                    android:textColor="@color/blue_1"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10.0dip"
                    android:layout_marginBottom="35.0dip"
                    android:text="@string/signup_title" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name_user"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                            android:textColor="@color/grey_blue"
                            android:textStyle="bold" />
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/name_entry"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                            android:textColor="@color/blue_1"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="-4.0dip"
                            android:layout_marginRight="-4.0dip"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:maxLength="50"
                            android:inputType="text" />
                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="10.0dip" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/student_id"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                            android:textColor="@color/grey_blue"
                            android:textStyle="bold" />
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/student_id"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                            android:textColor="@color/blue_1"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="-4.0dip"
                            android:layout_marginRight="-4.0dip"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:maxLength="50"
                            android:inputType="textCapCharacters" />
                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="10.0dip" />
                        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                            android:id="@+id/signup_course"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="Select Department"
                            android:textColorHint="#DC000000" />
                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="10.0dip" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/new_password"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                            android:textColor="@color/grey_blue"
                            android:textStyle="bold" />
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/new_password"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                            android:textColor="@color/blue_1"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="-4.0dip"
                            android:layout_marginRight="-4.0dip"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:maxLength="50"
                            android:inputType="textPassword" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/confirm_password"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                            android:textColor="@color/grey_blue"
                            android:textStyle="bold" />
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/confirm_password"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                            android:textColor="@color/blue_1"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="-4.0dip"
                            android:layout_marginRight="-4.0dip"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:maxLength="50"
                            android:inputType="textPassword" />
                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="3.0dip" />
                        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                            android:id="@+id/signup_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="8dp"
                            android:background="@drawable/button_shape"
                            android:text="@string/student_signup"
                            android:textColor="@color/white"
                            android:layout_gravity="center"
                            app:spinning_bar_width="4dp"
                            app:spinning_bar_color="#FFF"
                            app:spinning_bar_padding="6dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <LinearLayout
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:orientation="horizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15.0dip"
                            android:layout_marginBottom="5.0dip">
                            <TextView
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                                android:textColor="@color/blue_grey"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/old_student" />
                            <TextView
                                android:id="@+id/signin"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                                android:textStyle="bold"
                                android:textColor="@color/blue_1"
                                android:clickable="true"
                                android:focusable="true"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/student_signin" />
                        </LinearLayout>

                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>


</RelativeLayout>